<?xml version="1.0"?>
<package>
  <name>imu_calib</name>
  <version>0.0.0</version>
  <description>Package for performing and applying accelerometer calibrations</description>

  <author email="danielpkoch@gmail.com">Daniel Koch</author>
  <maintainer email="danielpkoch@gmail.com">Daniel Koch</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">http://wiki.ros.org/imu_calib</url>
  <url type="repository">https://github.com/dpkoch/imu_calib.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
