<?xml version="1.0"?>
<package>
  <name>imu_calib</name>
  <version>0.0.0</version>
  <description>Package for computing and applying IMU calibrations</description>

  <author email="daniel.p.koch@gmail.com">Daniel Koch</author>
  <maintainer email="daniel.p.koch@gmail.com">Daniel Koch</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/imu_calib</url>
  <url type="repository">https://github.com/dpkoch/imu_calib.git</url>
  <url type="bugtracker">https://github.com/dpkoch/imu_calib/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
</package>
